--- a/Atechy_test/Info.plist
+++ b/Atechy_test/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Hellix-Bold.ttf</string>
 		<string>Hellix-Regular.ttf</string>
 	</array>
 	<key>LSApplicationCategoryType</key>
